k8s/cloudops-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudops-service

spec:

  selector:
    app: cloudops-demo

  ports:
  - port: 80
    targetPort: 8081

  type: NodePort
