k8s/service.yaml
apiVersion: v1

kind: Service


metadata:

  name: cloudops-demo-service


spec:

  selector:

    app: cloudops-demo


  ports:

  - protocol: TCP

    port: 8081

    targetPort: 8081


  type: NodePort
