k8s/cloudops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudops-ingress

spec:

  rules:

  - host: cloudops.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: cloudops-service

            port:

              number: 80
